# jukemash

./: .editorconfig  .gitignore  Dockerfile  README.md  deploy.sh  docker-compose.yml  flake.nix  pyproject.toml  run.py  start.sh  utils.py
client/: index.html  package.json  pnpm-lock.yaml  vite.config.ts
client/src/: App.tsx  index.css  main.tsx
client/src/host/: AuthProvider.tsx  HostPage.tsx  HostView.tsx  SpotifyPlayer.tsx  spotifyPlayer.ts
client/src/join/: JoinPage.tsx
client/src/player/: PlayerPage.tsx
data/: playlists.json
src/app/: __init__.py
src/app/static/: index.html
