[tool.poetry]
name = "jukemash"
version = "0.1.0"
description = "JukeMash"
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
Flask = "^3.1.0"
Flask-SocketIO = "^5.4.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
