[tool.poetry]
name = "jukemash"
version = "0.1.0"
description = "JukeMash"
authors = ["Your Name <you@example.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
Flask = "^3.1.0"
Flask-SocketIO = "^5.4.1"
python-dotenv = "^1.0.1"
sqids = "^0.5.0"
uuid = "^1.30"
requests = "^2.32.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
